--- a/project.config.json
+++ b/project.config.json
@@ -35,13 +35,19 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
 					"name": "sdf",
 					"pathName": "pages/goods/index",
 					"query": "deviceId=502887849"
+				},
+				{
+					"id": -1,
+					"name": "ss",
+					"pathName": "pages/goods/index",
+					"scene": null
 				}
 			]
 		}
